#4 Added stocktake with qty report template

--- a/stocktake_with_qty.html
+++ b/stocktake_with_qty.html
@@ -32,7 +32,7 @@
                         {% endif %}
                     </div>
                     <div class="col col-packsize">{{ line.packSize }}</div>
-                    <div class="col col-actual-stock">.........................</div>
+                    <div class="col col-actual-stock">.....................</div>
                 </div>
                 {%- endfor %}
             </div>
