--- a/Invoice-print-ujwal/header copy.html
+++ b/Invoice-print-ujwal/header copy.html
@@ -1,4 +1,4 @@
 <div style="font-size: 10px; padding-top: 8px; text-align: center; width: 100%; height: 1400px; background-color:#ff0000">
-  <span>Ujwal and Anil having a hard time, can't expand the size of the of this header !!!!</span>
+  <span>Ujwal and Anil having a hard time</span>
 
 </div>
