--- a/picklist/picklist.html
+++ b/picklist/picklist.html
@@ -1,44 +1,33 @@
 <style>
     {% include "picklist.css" %}
 </style>
+<hr />
 
-<table class="header_section"> 
+<table class="header_supplied_section">
     <tr> 
-        <td class="header_section_field"></td> 
-        <th class="header_section_invoice_field" 
-            style="text-align: right;">Packing Slip: {{ data.invoice.invoiceNumber }}
-        </th>
+        <td class="header_section_field_left"></td>
+        <td id= "date" class="header_section_field_right"> Printed date: {{ now() | date(format="%m/%d/%Y") }}</td>
     </tr> 
 
     <tr> 
-        <td class="header_section_field"></td>
-        <td id= "date" class="header_section_field">Printed date:{{ now() | date(format="%m/%d/%Y") }}</td>
+        <td class="header_section_field_left">Supplied to:</td> 
+        <td class="header_section_field_right">Status: {{ data.invoice.status }}</td>
     </tr> 
 
     <tr> 
-        <td class="header_section_field"></td> 
-        <td class="header_section_field">Status: {{ data.invoice.status }}</td>
+        <td class="header_section_field_left">{{ data.invoice.otherPartyName }}</td> 
+        <td class="header_section_field_right">Entered date: {{ data.invoice.createdDatetime | date(format="%m/%d/%Y") }}</td>
     </tr> 
-
+     
     <tr> 
-        <td class="header_section_field_supp_to">Supplied to: {{ data.invoice.otherPartyName }}</td> 
-        <td class="header_section_field">Entered date: {{ data.invoice.createdDatetime | date(format="%m/%d/%Y") }}</td>
-    </tr> 
-
-    <tr> 
-        <td class="header_section_field_sup_add_label">Kanibahal,Lagankhel</td> 
-        <td class="header_section_field">Our ref: {{ data.invoice.theirReference }}</td>
+        <td class="header_section_field_left">Lalitpur, Kathmandu, Nepal Opposite NIMS College</td> 
+        <td class="header_section_field_right">Confirmed Date: {{ data.invoice.createdDatetime | date(format="%m/%d/%Y") }}</td>
     </tr>
-
-    <tr> 
-        <td class="header_section_field_sup_add_label">Lalitpur, Kathmandu, Nepal Opposite NIMS College</td> 
-        <td class="header_section_field"></td>
-    </tr>
-
+    
 </table>
 
-<table class="body_section">
-    <tr>
+<table class="body_section" cellpadding="2" cellspacing="0">
+    <tr class="body_column_label">
         <th class="line_number" style="width: 5%;">Line</th>
         <th class="location" style="width: 13%;">Location</th>
         <th class="item_name" style="width: 38%;">Item name</th>
@@ -49,15 +38,15 @@
         <th class="expiry" style="width: 10%;">Expiry</th>
     </tr>
     {% for line in data.invoice.lines.nodes -%}
-    <tr>
+    <tr class="body_value">
         <td class="line_number" style="width: 5%;">{{ loop.index }}</td>
         <td class="location" style="width: 13%;">{{ line.locationName }}</td>
-        <td class="item_name" style="width: 38%;">{{ line.itemName }}</td>
+        <td class="item_name" style="width: 40%;">{{ line.itemName }}</td>
         <td class="quantity" style="width: 8%;">{{ line.numberOfPacks }}</td>
         <td class="issued" style="width: 5%;">___________</td>
         <td class="pack" style="width: 8%;">{{ line.packSize }}</td>
         <td class="batch" style="width: 8%;">{{ line.batch }}</td>
-        <td class="expiry" style="width: 10%;">{{ line.batch }}</td>
+        <td class="expiry" style="width: 8%;">{{ line.expiryDate }}</td>
     </tr>
     {%- endfor %}
 </table>
