--- a/template-copy.html
+++ b/template-copy.html
@@ -356,7 +356,7 @@
 <div class="text-container">
 
 	<div id="invoiceAddressHeader">
-		<img style='display:block; width:10%;' src="{% include "logo_laos" %}"/>
+		<img style='display:block; width:10%;' src="{% include "logo_msupply" %}"/>
 		<!-- <img src="/Users/heidi/Documents/GitHub/remote-server/report_builder/example_invoice/invitech.jpg" alt=""> -->
 		<hr class="header1HLine">
 		<span id="invoiceNumberLabel" ><b>Invoice #: {{ data.invoice.invoiceNumber}}</b></span>
